Fixed the visible stlying by throwing the flash method into a variable and then setting it to null if a message doesn't exist.

--- a/server-app/public/css/main.css
+++ b/server-app/public/css/main.css
@@ -344,4 +344,5 @@ form {
 .user-message--error {
   border-color: red;
   background: rgb(255, 176, 176);
+  color: red;
 }
